--- a/desafios/modulo02/desafio012/estilo/style.css
+++ b/desafios/modulo02/desafio012/estilo/style.css
@@ -1,10 +1,20 @@
 @charset "UTF-8";
   
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", cursive,sans-serif;
+    --fonte3: "Sriracha", cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
 }
 html, body {
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -16,6 +26,8 @@ header {
 }
 
 header > h1 {
+    font-family: var(--fonte2);
+    font-size: 7vw;
     padding-top: 50px;
     font-variant: small-caps;
     
@@ -41,6 +53,8 @@ section {
     padding-bottom: 12vh;
     line-height: 1.8em;
     padding-left: 35px;
+    font-family: var(--fonte3);
+    font-size: 3vw;
     
 }
 
@@ -56,8 +70,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 300px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.501);
+    padding: 5px;
     
 }
 footer {
