--- a/desafios/modulo02/desafio012/estilo/style.css
+++ b/desafios/modulo02/desafio012/estilo/style.css
@@ -49,13 +49,16 @@ a:hover {
 }
 
 section {
-    padding-top: 15vh;
-    padding-bottom: 12vh;
+    padding-top: 12vh;
+    padding-bottom: 10vh;
     line-height: 1.8em;
-    padding-left: 35px;
+    padding-left: 40px;
     font-family: var(--fonte3);
     font-size: 3vw;
     
+}
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -65,14 +68,29 @@ section.normal {
 }
 
 section.imagem {
-    background-color: rgb(25, 25, 25);
+    background-color: rgba(25, 25, 25, 0.586);
     color: white;
+    box-shadow: inset 3px 3px 6px 0px black;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.501);
+    background-color: rgba(0, 0, 0, 0.64);
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+    
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right, center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right, center;
     
 }
 footer {
